Avoid element id collisions with the visual viewport

The frame scroll layer and the inner viewport layer had previously been
given the same element id.

BUG=658252

Review-Url: https://chromiumcodereview.appspot.com/2443633002
Cr-Commit-Position: refs/heads/master@{#426928}

Former-commit-id: d0124a2b6302fc8a5b3c335d5bbb0407a8a31bb4